--- a/index.html
+++ b/index.html
@@ -8,19 +8,11 @@
     <title>Build Week Project</title>
     <link rel="icon" href="./assets/img/logo.png" type="image/png" />
 
-    <script
-      src="https://kit.fontawesome.com/426cbf9d74.js"
-      crossorigin="anonymous"
-    ></script>
+    <script src="https://kit.fontawesome.com/426cbf9d74.js" crossorigin="anonymous"></script>
   </head>
   <body>
     <header>
-      <a href="./index.html"
-        ><img
-          id="backWelcomePage"
-          src="./assets/img/epicode_logo.png"
-          alt="Logo-EPICODE"
-      /></a>
+      <a href="./index.html"><img id="backWelcomePage" src="./assets/img/epicode_logo.png" alt="Logo-EPICODE" /></a>
 
       <div id="countdown">
         <div id="countdown-text">
@@ -40,14 +32,11 @@
         <div>
           <h3>Instruction</h3>
           <p>
-            We don't expect most engineers to know the answer to all of these
-            questions, so don't worry if you are unsure of a few of them.
+            We don't expect most engineers to know the answer to all of these questions, so don't worry if you are
+            unsure of a few of them.
           </p>
           <ul class="instrucrion-list">
-            <li>
-              Each question is <strong>timed</strong> and can only be
-              <strong>answered once</strong>.
-            </li>
+            <li>Each question is <strong>timed</strong> and can only be <strong>answered once</strong>.</li>
             <li>
               Changing browser tab or opening other windows will
               <strong>invalidate the question</strong>.
@@ -64,21 +53,12 @@
                 <li id="li2">Medium</li>
                 <li id="li3">Hard</li>
               </ul>
-              <input
-                id="rangeValue"
-                type="range"
-                min="0"
-                max="200"
-                step="100"
-                value="0"
-              />
+              <input id="rangeValue" type="range" min="0" max="200" step="100" value="0" />
             </div>
 
             <input type="checkbox" required id="checkbox1" />
             <label for="checkbox1">
-              <strong
-                >I promise to answer myself without help from anyone</strong
-              >
+              <strong>I promise to answer myself without help from anyone</strong>
             </label>
             <button id="proceed" class="universal-style-btn-ns">PROCEED</button>
           </form>
@@ -128,16 +108,11 @@
           </div>
           <div class="answer-result wrongs-result"></div>
         </div>
-        <button type="button" id="rate-us" class="universal-style-btn-ns">
-          RATE US
-        </button>
-        <button type="button" id="your-answers" class="universal-style-btn-ns">
-          YOUR ANSWERS
-        </button>
+        <button type="button" id="rate-us" class="universal-style-btn-ns">RATE US</button>
+        <button type="button" id="your-answers" class="universal-style-btn-ns">YOUR ANSWERS</button>
       </div>
       <div id="review"></div>
     </main>
-    <script src="./assets/js/index.js"></script>
     <script src="./assets/js/script.js"></script>
   </body>
 </html>
