--- a/feedback.html
+++ b/feedback.html
@@ -5,7 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="./assets/css/reset.css" />
     <link rel="stylesheet" href="./assets/css/style.css" />
-    <title>Document</title>
+    <title>Build Week Project - feedback</title>
+    <link rel="icon" href="./assets/img/logo.png" type="image/png" />
   </head>
   <body>
     <header>
